# AeroSocket

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  SECURITY.md  clippy.toml  deny.toml  instruction.md  rustfmt.toml
.github/workflows/: ci.yml  release.yml
CI/: docs.txt  macos.txt  ubuntu.txt  windows.txt
CI FAILS/: macos  ubuntulateststable  winwdows
aerosocket/: Cargo.toml
aerosocket-client/: Cargo.toml
aerosocket-client/src/: client.rs  config.rs  connection.rs  lib.rs  prelude.rs
aerosocket-core/: Cargo.toml
aerosocket-core/src/: error.rs  frame.rs  handshake.rs  lib.rs  message.rs  prelude.rs  protocol.rs  transport.rs
aerosocket-server/: Cargo.toml
aerosocket-server/examples/: server_example.rs
aerosocket-server/src/: config.rs  connection.rs  error.rs  handler.rs  lib.rs  logging.rs  manager.rs  prelude.rs  rate_limit.rs  server.rs  tcp_transport.rs  tls_transport.rs
aerosocket-server/src/certificates/: server.crt  server.key
aerosocket-server/tests/: integration_tests.rs
aerosocket-transport-tcp/: Cargo.toml
aerosocket-transport-tcp/src/: lib.rs  tcp.rs
aerosocket-transport-tls/: Cargo.toml
aerosocket-transport-tls/src/: lib.rs  tls.rs
aerosocket-wasm/: Cargo.toml
aerosocket-wasm-handler/: Cargo.toml
aerosocket-wasm-handler/src/: lib.rs
aerosocket-wasm-json-handler/: Cargo.toml
aerosocket-wasm-json-handler/src/: lib.rs
aerosocket-wasm/src/: lib.rs  wasm.rs
aerosocket/src/: lib.rs
aerosocket/tests/: client_roundtrip.rs
examples/: chat_server.rs  echo_client.rs  echo_server.rs  echo_server_tls.rs  server_example.rs
