[workspace]
members = [
    "aerosocket-core",
    "aerosocket-client",
    "aerosocket-server",
    "aerosocket-transport-tcp",
    "aerosocket-transport-tls",
    "aerosocket-wasm",
    "aerosocket",
    "aerosocket-wasm-handler",
    "aerosocket-wasm-json-handler",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
authors = ["AeroSocket Team"]
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
homepage = "https://aerosocket.rs"
repository = "https://github.com/M1tsumi/AeroSocket"
documentation = "https://docs.rs/aerosocket"
readme = "README.md"
keywords = ["websocket", "async", "tokio", "server", "client"]
categories = ["asynchronous", "network-programming", "web-programming::websocket"]
description = "Ultra-fast, zero-copy WebSocket library for enterprise-scale applications"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
bytes = "1.5"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
tracing = "0.1"
metrics = "0.22"
thiserror = "1.0"
futures-util = "0.3"
http = "1.0"
httparse = "1.8"
base64 = "0.21"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
sha1 = "0.10"
async-trait = "0.1"

# Optional dependencies (defined in individual crates)
serde = { version = "1.0", features = ["derive"] }
rkyv = { version = "0.7" }
tokio-rustls = "0.24"

# WASM dependencies
web-sys = { version = "0.3", features = ["MessageEvent", "ErrorEvent", "CloseEvent", "BinaryType", "Blob"] }
wasm-bindgen = "0.2"
js-sys = "0.3"

# Development dependencies
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tokio-test = "0.4"
tracing-test = "0.2"
tempfile = "3.8"

# Set consistent panic strategy for all profiles
[profile.dev]
panic = "unwind"  # Using unwind for better backtraces in development

[profile.release]
panic = "unwind"  # Using unwind for better error handling in production
lto = true
codegen-units = 1
opt-level = 3

[profile.test]
panic = "unwind"  # Ensure tests use unwind for better error reporting

[profile.bench]
panic = "unwind"  # Benchmarks should match release profile
lto = true
codegen-units = 1
debug = true

# Remove anyhow from profile.bench as it's not a valid profile key
# and should be in [dependencies] if needed
