[package]
name = "aerosocket-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "WebSocket client implementation for AeroSocket"

[features]
default = ["tokio-runtime"]

# Runtime features
tokio-runtime = ["tokio", "aerosocket-core/tokio-runtime"]
async-std-runtime = ["async-std", "aerosocket-core/async-std-runtime"]

# Transport features
transport-tcp = ["aerosocket-transport-tcp"]
transport-tls = ["aerosocket-transport-tls"]

# Serialization features
serde = ["aerosocket-core/serde"]

[dependencies]
# Core dependencies
aerosocket-core = { path = "../aerosocket-core", version = "0.1.0" }
bytes = { workspace = true }
futures-util = { workspace = true }
thiserror = { workspace = true }

# Optional runtime dependencies
tokio = { workspace = true, optional = true, features = ["io-util", "net", "time"] }
async-std = { workspace = true, optional = true }

# Optional transport dependencies
aerosocket-transport-tcp = { path = "../aerosocket-transport-tcp", version = "0.1.0", optional = true }
aerosocket-transport-tls = { path = "../aerosocket-transport-tls", version = "0.1.0", optional = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-test = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
