[package]
name = "aerosocket-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "WebSocket client implementation for AeroSocket"

[features]
default = ["tokio-runtime"]

# Runtime features
tokio-runtime = ["aerosocket-core/tokio-runtime"]

# Transport features
transport-tcp = ["aerosocket-transport-tcp"]
transport-tls = ["aerosocket-transport-tls"]

# Metrics features
metrics = ["dep:metrics"]

# Logging features
logging = ["dep:tracing"]

# Serialization features
serde = ["aerosocket-core/serde"]

[dependencies]
# Core dependencies
aerosocket-core = { path = "../aerosocket-core", version = "0.3.0" }
bytes = { workspace = true }
futures-util = { workspace = true }
thiserror = { workspace = true }

# TLS config building
rustls = { workspace = true }
webpki-roots = "0.25"
rustls-pemfile = "1.0"

# Optional metrics dependency
metrics = { workspace = true, optional = true }

# Optional logging/tracing dependency
tracing = { version = "0.1", optional = true }

# Runtime dependencies
tokio = { workspace = true, features = ["io-util", "net", "time"] }

# Optional transport dependencies
aerosocket-transport-tcp = { path = "../aerosocket-transport-tcp", version = "0.3.0", optional = true }
aerosocket-transport-tls = { path = "../aerosocket-transport-tls", version = "0.3.0", optional = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-test = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
