[package]
name = "aerosocket-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core WebSocket protocol implementation for AeroSocket"

[features]
default = ["tokio-runtime"]

# Runtime features
tokio-runtime = ["tokio"]
transport-tls = []

# Compression features
compression = ["dep:flate2"]

# Metrics features
metrics = ["dep:metrics"]

# Serialization features
serde = ["dep:serde"]
rkyv = ["dep:rkyv"]

[dependencies]
# Core dependencies
bytes = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
httparse = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
getrandom = { workspace = true }
sha1 = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }

# Optional runtime dependencies
tokio = { workspace = true, optional = true, features = ["io-util", "net", "time"] }

# Optional serialization
serde = { workspace = true, optional = true, features = ["derive"] }
rkyv = { workspace = true, optional = true }

# Optional compression
flate2 = { workspace = true, optional = true }

# Optional metrics
metrics = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-test = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
