[package]
name = "aerosocket-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "WebSocket server implementation for AeroSocket"

[features]
default = ["tokio", "tcp-transport"]
full = ["tokio", "tcp-transport", "tls-transport", "compression", "metrics", "serde", "logging"]

# Runtime features
tokio = ["aerosocket-transport-tcp/tokio-runtime"]

# Transport features
tcp-transport = ["aerosocket-transport-tcp"]
tls-transport = ["dep:tokio-rustls", "dep:rustls", "dep:rustls-pemfile"]

# Compression features
compression = []

# Metrics features
metrics = ["dep:metrics"]
prometheus = ["metrics", "dep:prometheus"]

# Logging features
logging = ["tracing", "tracing-subscriber"]

# Serialization features
serde = ["aerosocket-core/serde"]

[dependencies]
# Core dependencies
aerosocket-core = { path = "../aerosocket-core", version = "0.1.0" }
async-trait = "0.1"
bytes = "1.5"
futures-util = "0.3"
thiserror = { workspace = true }
log = "0.4"
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter"] }

# Runtime dependencies
tokio = { workspace = true, features = ["io-util", "net", "time", "sync", "rt-multi-thread", "macros"] }

# Optional transport dependencies
aerosocket-transport-tcp = { path = "../aerosocket-transport-tcp", version = "0.1.0", optional = true }
aerosocket-transport-tls = { path = "../aerosocket-transport-tls", version = "0.1.0", optional = true }

# TLS dependencies
tokio-rustls = { version = "0.24", optional = true }
rustls = { version = "0.21", optional = true }
rustls-pemfile = { version = "1.0", optional = true }

# Optional metrics dependencies
metrics = { workspace = true, optional = true }
prometheus = { version = "0.14", optional = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "server_example"
path = "examples/server_example.rs"
