[package]
name = "aerosocket-transport-tls"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "TLS transport implementation for AeroSocket"

[features]
default = ["tokio-runtime"]

# Runtime features
tokio-runtime = ["aerosocket-core/tokio-runtime"]

[dependencies]
# Core dependencies
aerosocket-core = { path = "../aerosocket-core", version = "0.2.0" }
bytes = { workspace = true }
futures-util = { workspace = true }
async-trait = { workspace = true }

# TLS dependencies
rustls = { workspace = true }
tokio-rustls = { version = "0.24", features = ["tls12"] }
webpki-roots = "0.25"

# Runtime dependencies
tokio = { workspace = true, features = ["io-util", "net", "time"] }

[dev-dependencies]
tokio = { workspace = true }
tokio-test = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
