[package]
name = "aerosocket"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description.workspace = true

[features]
default = ["tokio-runtime", "transport-tcp"]

# Runtime features
tokio-runtime = ["tokio", "aerosocket-core/tokio-runtime"]

# Component features
# Use the dependency names directly so that implicit features like
# `aerosocket-server` exist alongside the more ergonomic `server` alias.
server = ["aerosocket-server"]
client = ["aerosocket-client"]
transport-tcp = ["aerosocket-transport-tcp"]
transport-tls = ["aerosocket-transport-tls", "aerosocket-server/tls-transport"]
wasm = ["aerosocket-wasm"]

# Serialization features
serde = ["aerosocket-core/serde"]
rkyv = ["aerosocket-core/rkyv"]

# Feature combinations
full = [
    "server",
    "client", 
    "transport-tcp",
    "transport-tls",
    "wasm",
    "serde",
    "rkyv"
]

[dependencies]
aerosocket-core = { path = "../aerosocket-core", version = "0.2.0" }
aerosocket-server = { path = "../aerosocket-server", version = "0.2.0", optional = true }
# When using the top-level aerosocket crate as a client, always enable the
# aerosocket-client crate's TCP and TLS transport features so that
# aerosocket::prelude clients have a working transport in tests and examples.
aerosocket-client = { path = "../aerosocket-client", version = "0.2.0", optional = true, features = ["transport-tcp", "transport-tls"] }
aerosocket-transport-tcp = { path = "../aerosocket-transport-tcp", version = "0.2.0", optional = true }
aerosocket-transport-tls = { path = "../aerosocket-transport-tls", version = "0.2.0", optional = true }
aerosocket-wasm = { path = "../aerosocket-wasm", version = "0.2.0", optional = true }

# Optional runtime dependencies
tokio = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-test = { workspace = true }
rcgen = "0.12"
tempfile = { workspace = true }
tokio-rustls = { workspace = true }
tracing-test = { workspace = true }
tracing-subscriber = "0.3"

[[example]]
name = "echo_client"
path = "../examples/echo_client.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
